--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+#buttons{
+	width:100%;
+	background-color:#A164DF;
+	height:250px;
+	display:flex;
+	justify-content:space-evenly;
+	align-items:center;
+}
+button{
+/* 	width:80px;
+	height:38px; */
+	padding: 12px 20px;
+	border-radius:3px;
+	border:none;
+	background-color:#663399;
+	color:white;
+	
+}
