--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(165, 104, 226);
+	height:100vh;
+}
 #buttons{
-	width:100%;
-	background-color:#A164DF;
-	height:250px;
 	display:flex;
 	justify-content:space-evenly;
-	align-items:center;
 }
-button{
-/* 	width:80px;
-	height:38px; */
-	padding: 12px 20px;
-	border-radius:3px;
+.btn,.stop{
+	background-color:rgb(128, 41, 214);
 	border:none;
-	background-color:#663399;
 	color:white;
-	
+	padding:10px;
+	margin-top:250px;
 }
